@@ -4,12 +4,12 @@ import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
-        ArrayList<User> users = new ArrayList<>(Arrays.asList(
+        List<User> users = List.of(
                 new User("Denis", 18, "Student", "Warsaw"),
                 new User("Vlad", 23, "Programmer", "Krakow"),
                 new User("Danil", 23, "Waiter", "London"),
                 new User("Sasha", 18, "Cleaner", "Moscow")
-        ));
+        );
 
         Map<Integer, List<User>> ageToUsersMap = User.groupUsers(users);
 
